--- a/Git-Friend/package.json
+++ b/Git-Friend/package.json
@@ -59,7 +59,7 @@
     "lucide-react": "^0.454.0",
     "marked": "latest",
     "motion": "latest",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "latest",
     "openai": "latest",
     "react": "^19",
